<resources>
    <string name="app_name">Quokka</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">E-MAIL</string>
    <string name="password_hint">PASSWORD</string>
    <string name="log_in_button">Log In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="user_name_hint">NAME</string>
    <string name="user_surname_hint">SURNAME</string>
    <string name="user_address_hint">ADDRESS</string>
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="user_email_address">e-mail</string>
    <string name="number_of_points">0</string>
    <string name="points_text">points</string>
    <string name="user_rating_text">User Rating</string>
    <string name="edit">EDIT</string>
    <string name="task_name_hint">Task Name</string>
    <string name="add_button">Add</string>
    <string name="task_desctiption_hint">Description</string>
    <string name="start_date_hint">Start date (optional)</string>
    <string name="end_date_hint">End date (optional)</string>
    <string name="points_for_task_hint">Points for the task</string>
    <string name="taskName">Task Name</string>
    <string name="task_owner">Task Owner</string>
    <string name="task_description">Description</string>
    <string name="start_date">00.00.0000</string>
    <string name="end_date">00.00.0000</string>
    <string name="my_tasks">My Tasks</string>
    <string name="in_progress">In Progress</string>
    <string name="browse">Browse</string>
    <string name="add_task">Add Task</string>

    <string name="u_name"></string>
    <string name="u_surname"></string>
    <string name="u_email"></string>
    <string name="u_password"></string>
    <string name="u_address"></string>


    <!-- Output to TextView styled with a little HTML -->
    <string name="title"><![CDATA[<h3>HERE IS YOUR SLEEP DATA</h3>]]></string>
    <string name="start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="quality"><![CDATA[<b>Quality:</b>]]></string>
    <string name="hours_slept"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>


</resources>