<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TaskFragment">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/userPoints"
            style="@style/text_style"
            android:layout_width="47dp"
            android:layout_height="53dp"
            android:text="@string/number_of_points"
            android:textAlignment="center"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.167"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.168" />

        <TextView
            android:id="@+id/taskName"
            style="@style/text_style"
            android:layout_width="169dp"
            android:layout_height="39dp"
            android:text="@string/taskName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.171" />

        <TextView
            android:id="@+id/taskOwner"
            style="@style/text_style"
            android:layout_width="250dp"
            android:layout_height="31dp"
            android:layout_marginTop="60dp"
            android:text="@string/task_owner"
            app:layout_constraintBottom_toTopOf="@+id/taskDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskName"
            app:layout_constraintVertical_bias="0.333" />

        <TextView
            android:id="@+id/taskDescription"
            style="@style/text_style"
            android:layout_width="248dp"
            android:layout_height="274dp"
            android:text="@string/task_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.665" />

        <TextView
            android:id="@+id/startDate"
            style="@style/text_style"
            android:layout_width="104dp"
            android:layout_height="37dp"
            android:text="@string/start_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/endDate"
            app:layout_constraintHorizontal_bias="0.677"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskDescription"
            app:layout_constraintVertical_bias="0.485" />

        <TextView
            android:id="@+id/endDate"
            style="@style/text_style"
            android:layout_width="103dp"
            android:layout_height="36dp"
            android:text="@string/end_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.73"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskDescription"
            app:layout_constraintVertical_bias="0.475" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
</layout>