<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".logged.UserProfileActivity">

        <ImageView
            android:id="@+id/userIcon"
            android:layout_width="114dp"
            android:layout_height="105dp"
            android:layout_marginTop="115dp"
            android:src="@drawable/user"
            app:layout_constraintEnd_toStartOf="@id/userNameTextFrame"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameTextFrame"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginStart="160dp"
            android:hint="Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="false"
            android:clickable="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:clickable="false"
                android:focusable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userSurnameTextFrame"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="160dp"
            android:hint="Surname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userNameTextFrame"
            android:clickable="false"
            android:focusable="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userSurnameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:clickable="false"
                android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userEmailTextFrame"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="E-mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userSurnameTextFrame"
            android:clickable="false"
            android:focusable="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:clickable="false"
                android:focusable="false"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userPasswordTextFrame"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="Password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userEmailTextFrame"
            android:clickable="false"
            android:focusable="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="*****"
                android:clickable="false"
                android:focusable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/pointsTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/userPasswordTextFrame"
            app:layout_constraintBottom_toTopOf="@id/userRatingText"
            android:gravity="center_horizontal">
        <TextView
            android:id="@+id/numberOfPoints"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/number_of_points"
            android:textAlignment="textEnd"/>

        <TextView
            android:id="@+id/pointsText"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/points_text"
            android:textAlignment="textStart"/>
        </LinearLayout>

        <TextView
            android:id="@+id/userRatingText"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_rating_text"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/UserRatingBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pointsTextLayout" />

        <RatingBar
            android:id="@+id/UserRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/editProfileButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userRatingText"/>

        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/UserRatingBar" />



</androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>